fix: modals all extracted and collapsed into 1 reusable component

--- a/frontend/src/components/common/Modal.module.css
+++ b/frontend/src/components/common/Modal.module.css
@@ -33,3 +33,46 @@
 .h2 {
     @apply text-center text-2xl font-light mb-4 text-white;
 }
+
+.formGroup {}
+
+.formLabel {
+    @apply block font-semibold text-gray-200 mb-2;
+}
+
+.formInput {
+    @apply w-full p-1.5 mb-4 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 transition-all duration-300 ease-in-out bg-gray-200 text-black;
+}
+
+.buttonContainer {
+    @apply flex gap-4 mt-4 justify-center;
+}
+
+.submitButton {
+    @apply bg-blue-700 text-white py-2 px-6 border-none rounded-full cursor-pointer text-base shadow-md hover:bg-purple-700 transition-all duration-300 ease-in-out w-28 font-semibold;
+}
+
+.cancelButton {
+    @apply bg-transparent text-white py-2 px-6 rounded-full cursor-pointer text-base shadow-md hover:bg-purple-700 transition-all duration-300 ease-in-out w-28 font-semibold border-2 border-white;
+}
+
+.deleteButton {
+    @apply bg-[#b710b7] text-white py-2 px-6 border-none rounded-[20px] cursor-pointer text-base shadow-md hover:bg-purple-700 transition-all duration-300 ease-in-out w-[7rem] font-[600];
+}
+
+.deleteConfirmation {
+    @apply mt-4 text-center;
+}
+
+
+.confirmationActions {
+    @apply flex justify-center mt-4 gap-8;
+}
+
+.confirmDelete {
+    @apply bg-red-500 text-white border-none p-2 rounded-lg cursor-pointer hover:bg-red-600 transition-all duration-300 ease-in-out;
+}
+
+.cancelDelete {
+    @apply bg-gray-500 text-white border-none p-2 rounded-lg cursor-pointer hover:bg-gray-600 transition-all duration-300 ease-in-out;
+}
